--- a/.github/workflows/new-vtag.yml
+++ b/.github/workflows/new-vtag.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo ::set-output name=version::${GITHUB_REF/refs\/tags\/v/}
 
       - name: Setup Node
-      - uses: actions/setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: '12'
 
